crt: Add hrtfapo to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3298,6 +3298,7 @@ endif
 		%/libdwrite.a \
 		%/libfltlib.a \
 		%/libhid.a \
+		%/libhrtfapo.a \
 		%/libiphlpapi.a \
 		%/liblogoncli.a \
 		%/libmmdevapi.a \
