crt: Add inkobjcore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -164,6 +164,7 @@ lib32_DATA += %reldir%/libicu.a
 lib32_DATA += %reldir%/libigmpagnt.a
 lib32_DATA += %reldir%/libimagehlp.a
 lib32_DATA += %reldir%/libimm32.a
+lib32_DATA += %reldir%/libinkobjcore.a
 lib32_DATA += %reldir%/libiphlpapi.a
 lib32_DATA += %reldir%/libiscsidsc.a
 #lib32_DATA += %reldir%/libkernel32.a  # Handled by custom rule
