crt: Add windows.ai.machinelearning
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -344,6 +344,7 @@ libarm64_DATA += %reldir%/libwer.a
 libarm64_DATA += %reldir%/libwevtapi.a
 libarm64_DATA += %reldir%/libwiashext.a
 libarm64_DATA += %reldir%/libwimgapi.a
+libarm64_DATA += %reldir%/libwindows.ai.machinelearning.a
 libarm64_DATA += %reldir%/libwindowsapp.a
 libarm64_DATA += %reldir%/libwindowscoreheadless_apiset.a
 libarm64_DATA += %reldir%/libwinhttp.a
