--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -668,6 +668,7 @@ lib64_DATA += %reldir%/libwiadss.a
 lib64_DATA += %reldir%/libwiarpc.a
 lib64_DATA += %reldir%/libwiaservc.a
 lib64_DATA += %reldir%/libwiashext.a
+lib64_DATA += %reldir%/libwindows.ai.machinelearning.a
 lib64_DATA += %reldir%/libwinfax.a
 lib64_DATA += %reldir%/libwinhvemulation.a
 lib64_DATA += %reldir%/libwinhvplatform.a
