--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3015,7 +3015,8 @@ endif
 		%/libapi-ms-win-service-winsvc-l1-1-0_windowsapp.a \
 		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
-		%/libicu.a
+		%/libicu.a \
+		%/libwindows.ai.machinelearning.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
