crt: Add windows.ai.machinelearning to to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3319,6 +3319,7 @@ endif
 		%/libwebauthn.a \
 		%/libwebservices.a \
 		%/libwebsocket.a \
+		%/libwindows.ai.machinelearning.a \
 		%/libwindowscodecs.a \
 		%/libwinhttp.a \
 		%/libwkscli.a \
