crt: Add rometadata for all architectures
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -259,6 +259,7 @@ lib32_DATA += %reldir%/librapi.a
 lib32_DATA += %reldir%/librasapi32.a
 lib32_DATA += %reldir%/librasdlg.a
 lib32_DATA += %reldir%/libresutil.a
+lib32_DATA += %reldir%/librometadata.a
 lib32_DATA += %reldir%/librpcdce4.a
 lib32_DATA += %reldir%/librpcdiag.a
 lib32_DATA += %reldir%/librpchttp.a
