--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3016,6 +3016,7 @@ endif
 		%/libapi-ms-win-shcore-obsolete-l1-1-0.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libicu.a \
+		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
