crt: Add rometadata to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3311,6 +3311,7 @@ endif
 		%/libnetutils.a \
 		%/libpowrprof.a \
 		%/libpropsys.a \
+		%/librometadata.a \
 		%/librpcrt4.a \
 		%/libsamcli.a \
 		%/libschedcli.a \
