crt: Add windows.data.pdf to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3017,7 +3017,8 @@ endif
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libicu.a \
 		%/librometadata.a \
-		%/libwindows.ai.machinelearning.a
+		%/libwindows.ai.machinelearning.a \
+		%/libwindows.data.pdf.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
