crt: Add windows.data.pdf to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3324,6 +3324,7 @@ endif
 		%/libwebservices.a \
 		%/libwebsocket.a \
 		%/libwindows.ai.machinelearning.a \
+		%/libwindows.data.pdf.a \
 		%/libwindowscodecs.a \
 		%/libwinhttp.a \
 		%/libwkscli.a \
