crt: Add windows.networking for all architectures
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -347,6 +347,7 @@ libarm64_DATA += %reldir%/libwiashext.a
 libarm64_DATA += %reldir%/libwimgapi.a
 libarm64_DATA += %reldir%/libwindows.ai.machinelearning.a
 libarm64_DATA += %reldir%/libwindows.data.pdf.a
+libarm64_DATA += %reldir%/libwindows.networking.a
 libarm64_DATA += %reldir%/libwindowsapp.a
 libarm64_DATA += %reldir%/libwindowscoreheadless_apiset.a
 libarm64_DATA += %reldir%/libwinhttp.a
