--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -335,6 +335,7 @@ lib32_DATA += %reldir%/libwin32k.a
 lib32_DATA += %reldir%/libwin32spl.a
 lib32_DATA += %reldir%/libwindows.ai.machinelearning.a
 lib32_DATA += %reldir%/libwindows.data.pdf.a
+lib32_DATA += %reldir%/libwindows.networking.a
 lib32_DATA += %reldir%/libwinhttp.a
 lib32_DATA += %reldir%/libwininet.a
 lib32_DATA += %reldir%/libwinmm.a
