crt: Add windows.networking to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3326,6 +3326,7 @@ endif
 		%/libwebsocket.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
+		%/libwindows.networking.a \
 		%/libwindowscodecs.a \
 		%/libwinhttp.a \
 		%/libwkscli.a \
