crt: Add profapi to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2776,6 +2776,7 @@ endif
 		%/libnetutils.a \
 		%/liboleaut32.a \
 		%/libpowrprof.a \
+		%/libprofapi.a \
 		%/librpcrt4.a \
 		%/libsamcli.a \
 		%/libschedcli.a \
