crt: Add profapi to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3313,6 +3313,7 @@ endif
 		%/libncrypt.a \
 		%/libnetutils.a \
 		%/libpowrprof.a \
+		%/libprofapi.a \
 		%/libpropsys.a \
 		%/librometadata.a \
 		%/librpcrt4.a \
