crt: Add profapi to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2486,6 +2486,7 @@ endif
 		%/libmswsock.a \
 		%/libnetutils.a \
 		%/liboleaut32.a \
+		%/libprofapi.a \
 		%/libpsapi.a \
 		%/librpcrt4.a \
 		%/libsamcli.a \
