crt: Add wpprecorderum to onecore_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2787,6 +2787,7 @@ endif
 		%/libwinhttp.a \
 		%/libwkscli.a \
 		%/libwldap32.a \
+		%/libwpprecorderum.a \
 		%/libws2_32.a \
 		%/libxmllite.a
 	rm -f $@
