crt: Add wpprecorderum to windowscoreheadless_apiset
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3336,6 +3336,7 @@ endif
 		%/libwkscli.a \
 		%/libwlanapi.a \
 		%/libwldap32.a \
+		%/libwpprecorderum.a \
 		%/libxaudio2_9.a \
 		%/libxmllite.a
 	rm -f $@
