crt: Add coremessaging
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -78,6 +78,7 @@ lib64_DATA += %reldir%/libcomsnap.a
 lib64_DATA += %reldir%/libcomsvcs.a
 lib64_DATA += %reldir%/libcomuid.a
 lib64_DATA += %reldir%/libconsole.a
+lib64_DATA += %reldir%/libcoremessaging.a
 lib64_DATA += %reldir%/libcorpol.a
 lib64_DATA += %reldir%/libcredui.a
 #lib64_DATA += %reldir%/libcrtdll.a     # Specialized for W32API conditional
