--- a/mingw-w64-crt/libarm32/Makefile.am
+++ b/mingw-w64-crt/libarm32/Makefile.am
@@ -1034,6 +1034,7 @@ libarm32_DATA += %reldir%/libwwapi.a
 libarm32_DATA += %reldir%/libxaudio2_8.a
 libarm32_DATA += %reldir%/libxaudio2_9.a
 libarm32_DATA += %reldir%/libxinput1_4.a
+libarm32_DATA += %reldir%/libxinputuap.a
 libarm32_DATA += %reldir%/libxmllite.a
 libarm32_DATA += %reldir%/libxpsprint.a
 libarm32_DATA += %reldir%/libxpsrasterservice.a
