--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -380,4 +380,5 @@ libarm64_DATA += %reldir%/libwtsapi32.a
 libarm64_DATA += %reldir%/libxaudio2_8.a
 libarm64_DATA += %reldir%/libxaudio2_9.a
 libarm64_DATA += %reldir%/libxinput1_4.a
+libarm64_DATA += %reldir%/libxinputuap.a
 libarm64_DATA += %reldir%/libxmllite.a
