--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -380,6 +380,7 @@ lib32_DATA += %reldir%/libxinput1_2.a
 lib32_DATA += %reldir%/libxinput1_3.a
 lib32_DATA += %reldir%/libxinput1_4.a
 lib32_DATA += %reldir%/libxinput9_1_0.a
+lib32_DATA += %reldir%/libxinputuap.a
 lib32_DATA += %reldir%/libxmllite.a
 lib32_DATA += %reldir%/libwindowsapp.a
 lib32_DATA += %reldir%/libwindowscoreheadless_apiset.a
