crt: Add api-ms-win-net-isolation-l1-1-0 to nanosrv
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2385,6 +2385,7 @@ endif
 	$(RANLIB) $@
 
 %/libnanosrv.a: lib-common/nanosrv.mri \
+		%/libapi-ms-win-net-isolation-l1-1-0.a \
 		%/libclfsw32.a \
 		%/libclusapi.a \
 		%/libcryptxml.a \
