crt: Add cut-down advapi32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2417,6 +2417,7 @@ endif
 	$(RANLIB) $@
 
 %/libonecore.a: lib-common/onecore.mri \
+		%/libadvapi32_onecore.a \
 		%/libapi-ms-win-core-backgroundtask-l1-1-0.a \
 		%/libapi-ms-win-core-calendar-l1-1-0.a \
 		%/libapi-ms-win-core-comm-l1-1-1.a \
