crt: Add cut-down comctl32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2481,6 +2481,7 @@ endif
 		%/libauthz.a \
 		%/libbcrypt.a \
 		%/libcabinet.a \
+		%/libcomctl32_onecore.a \
 		%/libcomdlg32.a \
 		%/libcrypt32.a \
 		%/libcryptnet.a \
