crt: Add cut-down gdi32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2493,6 +2493,7 @@ endif
 		%/libdsrole.a \
 		%/libfltlib.a \
 		%/libfontsub.a \
+		%/libgdi32_onecore.a \
 		%/libiphlpapi.a \
 		%/liblogoncli.a \
 		%/libmpr.a \
