crt: Add cut-down kernel32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2495,6 +2495,7 @@ endif
 		%/libfontsub.a \
 		%/libgdi32_onecore.a \
 		%/libiphlpapi.a \
+		%/libkernel32_onecore.a \
 		%/liblogoncli.a \
 		%/libmpr.a \
 		%/libmswsock.a \
