crt: Add cut-down ncrypt to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2499,6 +2499,7 @@ endif
 		%/liblogoncli.a \
 		%/libmpr.a \
 		%/libmswsock.a \
+		%/libncrypt_onecore.a \
 		%/libnetutils.a \
 		%/liboleaut32.a \
 		%/libprofapi.a \
