crt: Add cut-down normaliz to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2501,6 +2501,7 @@ endif
 		%/libmswsock.a \
 		%/libncrypt_onecore.a \
 		%/libnetutils.a \
+		%/libnormaliz_onecore.a \
 		%/liboleaut32.a \
 		%/libprofapi.a \
 		%/libpsapi.a \
