crt: Add cut-down ntdll to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2502,6 +2502,7 @@ endif
 		%/libncrypt_onecore.a \
 		%/libnetutils.a \
 		%/libnormaliz_onecore.a \
+		%/libntdll_onecore.a \
 		%/liboleaut32.a \
 		%/libprofapi.a \
 		%/libpsapi.a \
