crt: Add cut-down ole32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2503,6 +2503,7 @@ endif
 		%/libnetutils.a \
 		%/libnormaliz_onecore.a \
 		%/libntdll_onecore.a \
+		%/libole32_onecore.a \
 		%/liboleaut32.a \
 		%/libprofapi.a \
 		%/libpsapi.a \
