crt: Add cut-down powrprof to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2505,6 +2505,7 @@ endif
 		%/libntdll_onecore.a \
 		%/libole32_onecore.a \
 		%/liboleaut32.a \
+		%/libpowrprof_onecore.a \
 		%/libprofapi.a \
 		%/libpsapi.a \
 		%/librpcrt4.a \
