crt: Add cut-down secur32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2511,6 +2511,7 @@ endif
 		%/librpcrt4.a \
 		%/libsamcli.a \
 		%/libschedcli.a \
+		%/libsecur32_onecore.a \
 		%/libshlwapi.a \
 		%/libsrvcli.a \
 		%/libsspicli.a \
