crt: Add cut-down setupapi to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2512,6 +2512,7 @@ endif
 		%/libsamcli.a \
 		%/libschedcli.a \
 		%/libsecur32_onecore.a \
+		%/libsetupapi_onecore.a \
 		%/libshlwapi.a \
 		%/libsrvcli.a \
 		%/libsspicli.a \
