crt: Add cut-down shell32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2513,6 +2513,7 @@ endif
 		%/libschedcli.a \
 		%/libsecur32_onecore.a \
 		%/libsetupapi_onecore.a \
+		%/libshell32_onecore.a \
 		%/libshlwapi.a \
 		%/libsrvcli.a \
 		%/libsspicli.a \
