crt: Add cut-down tdh to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2517,6 +2517,7 @@ endif
 		%/libshlwapi.a \
 		%/libsrvcli.a \
 		%/libsspicli.a \
+		%/libtdh_onecore.a \
 		%/libuserenv.a \
 		%/libversion.a \
 		%/libwebsocket.a \
