crt: Add cut-down user32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2518,6 +2518,7 @@ endif
 		%/libsrvcli.a \
 		%/libsspicli.a \
 		%/libtdh_onecore.a \
+		%/libuser32_onecore.a \
 		%/libuserenv.a \
 		%/libversion.a \
 		%/libwebsocket.a \
