crt: Add cut-down winhttp to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2522,6 +2522,7 @@ endif
 		%/libuserenv.a \
 		%/libversion.a \
 		%/libwebsocket.a \
+		%/libwinhttp_onecore.a \
 		%/libwkscli.a \
 		%/libwldap32.a \
 		%/libwpprecorderum.a \
