--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2523,6 +2523,7 @@ endif
 		%/libversion.a \
 		%/libwebsocket.a \
 		%/libwinhttp_onecore.a \
+		%/libwinmm_onecore.a \
 		%/libwkscli.a \
 		%/libwldap32.a \
 		%/libwpprecorderum.a \
