crt: Add cut-down wtsapi32 to onecore
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2528,6 +2528,7 @@ endif
 		%/libwldap32.a \
 		%/libwpprecorderum.a \
 		%/libws2_32.a \
+		%/libwtsapi32_onecore.a \
 		%/libxmllite.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
