--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3372,6 +3372,7 @@ endif
 		%/libapi-ms-win-shcore-obsolete-l1-1-0_windowsapp.a \
 		%/libapi-ms-win-shcore-stream-winrt-l1-1-0.a \
 		%/libbcrypt_windowsapp.a \
+		%/libcabinet_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
