crt: Add cut-down d3d12 to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3380,6 +3380,7 @@ endif
 		%/libchakrart_windowsapp.a \
 		%/libcrypt32_windowsapp.a \
 		%/libd3d11_windowsapp.a \
+		%/libd3d12_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
