--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3384,6 +3384,7 @@ endif
 		%/libd3d11_windowsapp.a \
 		%/libd3d12_windowsapp.a \
 		%/libd3dcompiler_47_windowsapp.a \
+		%/libdhcpcsvc6_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
