crt: Add cut-down dhcpcsvc to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3386,6 +3386,7 @@ endif
 		%/libd3d12_windowsapp.a \
 		%/libd3dcompiler_47_windowsapp.a \
 		%/libdhcpcsvc6_windowsapp.a \
+		%/libdhcpcsvc_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
