crt: Add cut-down diagnosticdataquery to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3388,6 +3388,7 @@ endif
 		%/libd3dcompiler_47_windowsapp.a \
 		%/libdhcpcsvc6_windowsapp.a \
 		%/libdhcpcsvc_windowsapp.a \
+		%/libdiagnosticdataquery_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
