crt: Add cut-down directml to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3390,6 +3390,7 @@ endif
 		%/libdhcpcsvc6_windowsapp.a \
 		%/libdhcpcsvc_windowsapp.a \
 		%/libdiagnosticdataquery_windowsapp.a \
+		%/libdirectml_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
