crt: Add cut-down dxgi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3394,6 +3394,7 @@ endif
 		%/libdiagnosticdataquery_windowsapp.a \
 		%/libdirectml_windowsapp.a \
 		%/libdnsapi_windowsapp.a \
+		%/libdxgi_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
