crt: Add cut-down esent to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3396,6 +3396,7 @@ endif
 		%/libdirectml_windowsapp.a \
 		%/libdnsapi_windowsapp.a \
 		%/libdxgi_windowsapp.a \
+		%/libesent_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
