crt: Add cut-down hid to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3398,6 +3398,7 @@ endif
 		%/libdnsapi_windowsapp.a \
 		%/libdxgi_windowsapp.a \
 		%/libesent_windowsapp.a \
+		%/libhid_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
