crt: Add cut-down hrtfapo to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3400,6 +3400,7 @@ endif
 		%/libdxgi_windowsapp.a \
 		%/libesent_windowsapp.a \
 		%/libhid_windowsapp.a \
+		%/libhrtfapo_windowsapp.a \
 		%/libicu.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
