crt: Add cut-down inkobjcore to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3403,6 +3403,7 @@ endif
 		%/libhid_windowsapp.a \
 		%/libhrtfapo_windowsapp.a \
 		%/libicu.a \
+		%/libinkobjcore_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
