crt: Add cut-down iphlpapi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3404,6 +3404,7 @@ endif
 		%/libhrtfapo_windowsapp.a \
 		%/libicu.a \
 		%/libinkobjcore_windowsapp.a \
+		%/libiphlpapi_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
