crt: Add cut-down mfsensorgroup to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3406,6 +3406,7 @@ endif
 		%/libinkobjcore_windowsapp.a \
 		%/libiphlpapi_windowsapp.a \
 		%/libmfplat_windowsapp.a \
+		%/libmfsensorgroup_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
