crt: Add cut-down mf to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3407,6 +3407,7 @@ endif
 		%/libiphlpapi_windowsapp.a \
 		%/libmfplat_windowsapp.a \
 		%/libmfsensorgroup_windowsapp.a \
+		%/libmf_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
