crt: Add cut-down mmdevapi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3408,6 +3408,7 @@ endif
 		%/libmfplat_windowsapp.a \
 		%/libmfsensorgroup_windowsapp.a \
 		%/libmf_windowsapp.a \
+		%/libmmdevapi_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
