crt: Add cut-down mpr to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3409,6 +3409,7 @@ endif
 		%/libmfsensorgroup_windowsapp.a \
 		%/libmf_windowsapp.a \
 		%/libmmdevapi_windowsapp.a \
+		%/libmpr_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
