crt: Add cut-down msajapi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3410,6 +3410,7 @@ endif
 		%/libmf_windowsapp.a \
 		%/libmmdevapi_windowsapp.a \
 		%/libmpr_windowsapp.a \
+		%/libmsajapi_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
