crt: Add cut-down mscms to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3411,6 +3411,7 @@ endif
 		%/libmmdevapi_windowsapp.a \
 		%/libmpr_windowsapp.a \
 		%/libmsajapi_windowsapp.a \
+		%/libmscms_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
