crt: Add cut-down ncrypt to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3413,6 +3413,7 @@ endif
 		%/libmsajapi_windowsapp.a \
 		%/libmscms_windowsapp.a \
 		%/libmswsock_windowsapp.a \
+		%/libncrypt_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
