--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3415,6 +3415,7 @@ endif
 		%/libmswsock_windowsapp.a \
 		%/libncrypt_windowsapp.a \
 		%/libntdll_windowsapp.a \
+		%/libpowrprof_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
