crt: Add cut-down propsys to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3416,6 +3416,7 @@ endif
 		%/libncrypt_windowsapp.a \
 		%/libntdll_windowsapp.a \
 		%/libpowrprof_windowsapp.a \
+		%/libpropsys_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
