crt: Add cut-down psapi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3417,6 +3417,7 @@ endif
 		%/libntdll_windowsapp.a \
 		%/libpowrprof_windowsapp.a \
 		%/libpropsys_windowsapp.a \
+		%/libpsapi_windowsapp.a \
 		%/librometadata.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
