crt: Add cut-down uiautomationcore to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3419,6 +3419,7 @@ endif
 		%/libpropsys_windowsapp.a \
 		%/libpsapi_windowsapp.a \
 		%/librometadata.a \
+		%/libuiautomationcore_windowsapp.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
 		%/libwindows.networking.a
