crt: Add cut-down urlmon to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3420,6 +3420,7 @@ endif
 		%/libpsapi_windowsapp.a \
 		%/librometadata.a \
 		%/libuiautomationcore_windowsapp.a \
+		%/liburlmon_windowsapp.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
 		%/libwindows.networking.a
