crt: Add cut-down webauthn to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3421,6 +3421,7 @@ endif
 		%/librometadata.a \
 		%/libuiautomationcore_windowsapp.a \
 		%/liburlmon_windowsapp.a \
+		%/libwebauthn_windowsapp.a \
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
 		%/libwindows.networking.a
