--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3426,7 +3426,8 @@ endif
 		%/libwindows.ai.machinelearning.a \
 		%/libwindows.data.pdf.a \
 		%/libwindows.networking.a \
-		%/libwindowscodecs_windowsapp.a
+		%/libwindowscodecs_windowsapp.a \
+		%/libwinhttp_windowsapp.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
