crt: Add cut-down wlanapi to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3428,7 +3428,8 @@ endif
 		%/libwindows.networking.a \
 		%/libwindowscodecs_windowsapp.a \
 		%/libwinhttp_windowsapp.a \
-		%/libwintrust_windowsapp.a
+		%/libwintrust_windowsapp.a \
+		%/libwlanapi_windowsapp.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
