crt: Add cut-down oleaut32 to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3415,6 +3415,7 @@ endif
 		%/libmswsock_windowsapp.a \
 		%/libncrypt_windowsapp.a \
 		%/libntdll_windowsapp.a \
+		%/liboleaut32_windowsapp.a \
 		%/libpowrprof_windowsapp.a \
 		%/libpropsys_windowsapp.a \
 		%/libpsapi_windowsapp.a \
