crt: Add cut-down rpcrt4 to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3420,6 +3420,7 @@ endif
 		%/libpropsys_windowsapp.a \
 		%/libpsapi_windowsapp.a \
 		%/librometadata.a \
+		%/librpcrt4_windowsapp.a \
 		%/libuiautomationcore_windowsapp.a \
 		%/liburlmon_windowsapp.a \
 		%/libwebauthn_windowsapp.a \
