crt: Add cut-down netutils to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3414,6 +3414,7 @@ endif
 		%/libmscms_windowsapp.a \
 		%/libmswsock_windowsapp.a \
 		%/libncrypt_windowsapp.a \
+		%/libnetutils_windowsapp.a \
 		%/libntdll_windowsapp.a \
 		%/liboleaut32_windowsapp.a \
 		%/libpowrprof_windowsapp.a \
