--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3423,6 +3423,7 @@ endif
 		%/librometadata.a \
 		%/librpcrt4_windowsapp.a \
 		%/libsrvcli_windowsapp.a \
+		%/libsspicli_windowsapp.a \
 		%/libuiautomationcore_windowsapp.a \
 		%/liburlmon_windowsapp.a \
 		%/libwebauthn_windowsapp.a \
