crt: Add cut-down wkscli to windowsapp
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -3434,6 +3434,7 @@ endif
 		%/libwindowscodecs_windowsapp.a \
 		%/libwinhttp_windowsapp.a \
 		%/libwintrust_windowsapp.a \
+		%/libwkscli_windowsapp.a \
 		%/libwlanapi_windowsapp.a \
 		%/libws2_32_windowsapp.a \
 		%/libxaudio2_9_windowsapp.a
