--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -233,6 +233,7 @@ libarm64_DATA += %reldir%/liboleaut32.a
 libarm64_DATA += %reldir%/liboledlg.a
 libarm64_DATA += %reldir%/libonecore_apiset.a
 libarm64_DATA += %reldir%/libonecore.a
+libarm64_DATA += %reldir%/libonecoreuap_apiset.a
 libarm64_DATA += %reldir%/libopengl32.a
 libarm64_DATA += %reldir%/libosuninst.a
 libarm64_DATA += %reldir%/libp2p.a
