crt: Add wsmsvc to all architectures
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -772,6 +772,7 @@ lib64_DATA += %reldir%/libwdsutil.a
 lib64_DATA += %reldir%/libwdsimage.a
 lib64_DATA += %reldir%/libwofutil.a
 #lib64_DATA += %reldir%/libws2_32.a      # Handled by custom rule
+lib64_DATA += %reldir%/libwsmsvc.a
 lib64_DATA += %reldir%/libvirtdisk.a
 lib64_DATA += %reldir%/libcryptxml.a
 lib64_DATA += %reldir%/libsspicli.a
