--- a/mingw-w64-crt/libarm64/Makefile.am
+++ b/mingw-w64-crt/libarm64/Makefile.am
@@ -375,6 +375,7 @@ libarm64_DATA += %reldir%/libwscapi.a
 libarm64_DATA += %reldir%/libwscsvc.a
 libarm64_DATA += %reldir%/libwshbth.a
 libarm64_DATA += %reldir%/libwslapi.a
+libarm64_DATA += %reldir%/libwsmsvc.a
 libarm64_DATA += %reldir%/libwsock32.a
 libarm64_DATA += %reldir%/libwtsapi32.a
 libarm64_DATA += %reldir%/libxaudio2_8.a
