crt: Add wsmsvc to nanosrv
Signed-off-by: Mark Harmstone <mark@harmstone.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -2409,7 +2409,8 @@ endif
 		%/libwebservices.a \
 		%/libwer.a \
 		%/libwevtapi.a \
-		%/libwintrust.a
+		%/libwintrust.a \
+		%/libwsmsvc.a
 	rm -f $@
 	cd $(dir $@) && $(AR) -M < $(abspath $<)
 	$(RANLIB) $@
