tools: Regenerate Makefile.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-tools/genpeimg/Makefile.in
+++ b/mingw-w64-tools/genpeimg/Makefile.in
@@ -296,7 +296,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 genpeimg_SOURCES = src/img.h src/img.c src/img_pe.c src/genpeimg.c
 genpeimg_CPPFLAGS = -Isrc
-genpeimg_CFLAGS = $(AM_CFLAGS) -O3 -g -Werror -Wall -Wextra
+genpeimg_CFLAGS = $(AM_CFLAGS) -O3 -g -Wall -Wextra
 DISTCHECK_CONFIGURE_FLAGS = --host=$(host)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
