--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -607,11 +607,13 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/windows.graphics.directx.direct3d11.idl \
 @HAVE_WIDL_TRUE@  include/windows.graphics.effects.idl \
 @HAVE_WIDL_TRUE@  include/windows.graphics.holographic.idl \
+@HAVE_WIDL_TRUE@  include/windows.graphics.imaging.idl \
 @HAVE_WIDL_TRUE@  include/windows.management.deployment.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.capture.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.closedcaptioning.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.devices.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.effects.idl \
+@HAVE_WIDL_TRUE@  include/windows.media.faceanalysis.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.render.idl \
 @HAVE_WIDL_TRUE@  include/windows.media.speechrecognition.idl \
@@ -620,6 +622,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/windows.networking.idl \
 @HAVE_WIDL_TRUE@  include/windows.perception.spatial.idl \
 @HAVE_WIDL_TRUE@  include/windows.perception.spatial.surfaces.idl \
+@HAVE_WIDL_TRUE@  include/windows.security.authentication.onlineid.idl \
 @HAVE_WIDL_TRUE@  include/windows.security.credentials.idl \
 @HAVE_WIDL_TRUE@  include/windows.security.credentials.ui.idl \
 @HAVE_WIDL_TRUE@  include/windows.security.cryptography.idl \
